# Quake-Log-Parser

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
build-develop/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build-develop/.cmake/api/v1/reply/: cache-v2-187c8c0f22e05a2aec00.json  cmakeFiles-v1-3986ac6f048dde7451f0.json  (+10 more)
build-develop/src/: cmake_install.cmake
build-develop/tests/: cmake_install.cmake
logs/: quakelog.txt
output/: causesofdeath.json  matchresults.json
src/: CMakeLists.txt  cmake_install.cmake  game.cpp  game.h  main.c  main.cpp  myparser.cpp  parser.c  parser.cpp  parser.h  report.cpp  report.h
src/include/: myparser.h
tests/: CMakeLists.txt
tests/build-develop/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
tests/build-develop/.cmake/api/v1/reply/: cache-v2-7d765f18cd44d1831c94.json  cmakeFiles-v1-ba853d85ec79cfe95d1f.json  codemodel-v2-afd694f680c1abfd752a.json  directory-_deps.googletest-build.googlemock-Debug-5540a9777b3179c80053.json  directory-_deps.googletest-build.googletest-Debug-5f39ed02ff32a35c5aa7.json  index-2022-11-17T16-39-43-0207.json  target-gmock-Debug-4eed642fe380eb1109c0.json  target-gmock_main-Debug-6c7146c5763455fbc433.json  target-gtest-Debug-97ffa10eb65bfa2ad99f.json  target-gtest_main-Debug-29e92bf31d670f196470.json  target-parse_test-Debug-cbeaa5974a3af8fb4b0d.json
tests/log/: lineoflog.txt  processedlog.txt
tests/src/: parser_test.cpp
tests/src/include/: report.h
